--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="https://fav.farm/🔥" />
-    <title>Document</title>
+  
+    <title>clock 🕞</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
